Real data structure and filtering logic via astro content collection (#22)
* Add MDX

* Collection setup & home page rendering

* Displayed items now respond to filter state changes

* Switch to client-side filtering

* Remove SSR

* Add vercel adaptor

* Enable SSR

* Rename frontmatter "layout" to "orientation"

* Fix event listeners attachment issues on client side navigation

* Fix state sync issues when navigating client-side to the same page

--- a/src/components/blocks/PreviewBlock.astro
+++ b/src/components/blocks/PreviewBlock.astro
@@ -9,8 +9,9 @@ interface Props {
 	bgImage: string;
 	previewImage: string;
 	position?: "top" | "bottom";
-	layout?: "landscape" | "portrait";
+	orientation?: "landscape" | "portrait";
 	tags?: string[];
+	[key: string]: any;
 }
 
 const {
@@ -20,8 +21,9 @@ const {
 	bgImage,
 	previewImage,
 	position = "top",
-	layout = "portrait",
+	orientation = "portrait",
 	tags,
+	...rest
 } = Astro.props;
 ---
 
@@ -31,12 +33,13 @@ const {
 		"mb-12 md:mb-0",
 		position === "bottom" && "md:flex-col-reverse",
 	]}
+	{...rest}
 >
 	<div
 		class:list={[
 			"group relative flex w-full items-center justify-center",
-			layout === "portrait" && "aspect-4/5",
-			layout === "landscape" && "aspect-5/4",
+			orientation === "portrait" && "aspect-4/5",
+			orientation === "landscape" && "aspect-5/4",
 		]}
 		style={{ backgroundImage: `url(${bgImage})`, backgroundSize: "cover" }}
 	>
