--- a/src/components/blocks/PreviewBlock.astro
+++ b/src/components/blocks/PreviewBlock.astro
@@ -11,6 +11,7 @@ interface Props {
 	position?: "top" | "bottom";
 	orientation?: "landscape" | "portrait";
 	tags?: string[];
+	id: string;
 	[key: string]: any;
 }
 
@@ -23,6 +24,7 @@ const {
 	position = "top",
 	orientation = "portrait",
 	tags,
+	id,
 	...rest
 } = Astro.props;
 ---
@@ -35,34 +37,37 @@ const {
 	]}
 	{...rest}
 >
-	<div
-		class:list={[
-			"group relative flex w-full items-center justify-center",
-			orientation === "portrait" && "aspect-4/5",
-			orientation === "landscape" && "aspect-5/4",
-		]}
-		style={{ backgroundImage: `url(${bgImage})`, backgroundSize: "cover" }}
-	>
-		{
-			tags && tags.length > 0 && (
-				<div class="absolute top-2 right-2 flex gap-2 opacity-100 transition-opacity duration-300 md:opacity-0 md:group-hover:opacity-100">
-					{tags.map((tag) => (
-						<Badge text={tag} />
-					))}
-				</div>
-			)
-		}
-		<img
-			src={previewImage}
-			alt="Preview"
-			class="h-auto w-[80%]"
-			loading="lazy"
-		/>
-	</div>
+	<a href={`/interactions/${id}/`} class="block" aria-label={`View ${title}`}>
+		<div
+			class:list={[
+				"group relative flex w-full items-center justify-center",
+				orientation === "portrait" && "aspect-4/5",
+				orientation === "landscape" && "aspect-5/4",
+			]}
+			style={{
+				backgroundImage: `url(${bgImage})`,
+				backgroundSize: "cover",
+			}}
+		>
+			{
+				tags && tags.length > 0 && (
+					<div class="absolute top-2 right-2 flex gap-2 opacity-100 transition-opacity duration-300 md:opacity-0 md:group-hover:opacity-100">
+						{tags.map((tag) => (
+							<Badge text={tag} />
+						))}
+					</div>
+				)
+			}
+			<img
+				src={previewImage}
+				alt="Preview"
+				class="h-auto w-[80%]"
+				loading="lazy"
+			/>
+		</div>
+	</a>
 	<div class="flex flex-col gap-1 md:w-[480px]">
-		<p class="font-switzer text-base-300 text-sm">
-			{date}
-		</p>
+		<p class="font-switzer text-base-300 text-sm">{date}</p>
 		<h2 class="font-cabinet text-base-900 text-3xl leading-none font-medium">
 			{title}
 		</h2>
