--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,7 @@ const allItems = [...interactions, ...articles].sort(
 				return (
 					<PreviewBlock
 						{...item.data}
+						id={item.id}
 						date={formattedDate}
 						bgImage={"bgImage" in item.data ? item.data.bgImage || "" : ""}
 						previewImage={item.data.previewImage ?? ""}
