--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,13 @@ import { getCollection } from "astro:content";
 const interactions = await getCollection("interactions");
 const articles = await getCollection("articles");
 
-const allItems = [...interactions, ...articles].sort(
-	(a, b) => b.data.date.getTime() - a.data.date.getTime(),
-);
+const allItems = [...interactions, ...articles].sort((a, b) => {
+	const aDate =
+		a.collection === "interactions" ? a.data.createdDate : a.data.date;
+	const bDate =
+		b.collection === "interactions" ? b.data.createdDate : b.data.date;
+	return bDate.getTime() - aDate.getTime();
+});
 ---
 
 <HorizontalScrollLayout
@@ -21,7 +25,11 @@ const allItems = [...interactions, ...articles].sort(
 >
 	{
 		allItems.map((item) => {
-			const formattedDate = item.data.date.toLocaleDateString("en-US", {
+			const itemDate =
+				item.collection === "interactions"
+					? item.data.createdDate
+					: item.data.date;
+			const formattedDate = itemDate.toLocaleDateString("en-US", {
 				year: "numeric",
 				month: "short",
 				day: "numeric",
