Fix padding animation inconsistencies

--- a/src/layouts/InteractionLayout.astro
+++ b/src/layouts/InteractionLayout.astro
@@ -31,7 +31,7 @@ const { title, description, createdDate, lastUpdatedDate, technologies } =
 		</div>
 		<div
 			id="content-area"
-			class="flex w-full flex-1 flex-col overflow-hidden pl-0 transition-all duration-400 min-[824px]:overflow-auto"
+			class="flex w-full flex-1 flex-col overflow-hidden pl-0 transition-all duration-800 ease-out min-[824px]:overflow-auto"
 		>
 			<slot name="interactive">
 				<div
