--- a/src/components/blocks/PreviewBlock.astro
+++ b/src/components/blocks/PreviewBlock.astro
@@ -10,8 +10,9 @@ interface Props {
 	bgImage: string;
 	previewVideo: string;
 	position?: "top" | "bottom";
-	orientation?: "landscape" | "portrait";
+	orientation?: "portrait" | "landscape";
 	tags?: string[];
+	badgeVariant?: "light" | "dark";
 	id: string;
 	[key: string]: any;
 }
@@ -25,6 +26,7 @@ const {
 	position = "top",
 	orientation = "portrait",
 	tags,
+	badgeVariant = "light",
 	id,
 	...rest
 } = Astro.props;
@@ -57,7 +59,7 @@ const previewVideoUrl = getCldVideoUrl({ src: previewVideo });
 				tags && tags.length > 0 && (
 					<div class="absolute top-2 right-2 flex gap-2 opacity-100 transition-opacity duration-300 md:opacity-0 md:group-hover:opacity-100">
 						{tags.map((tag) => (
-							<Badge text={tag} />
+							<Badge text={tag} variant={badgeVariant} />
 						))}
 					</div>
 				)
